FusionDev Backup1/src/objects/Holidays__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Christmas_Day__c</fullName>
        <label>Christmas Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Christmas_Eve__c</fullName>
        <label>Christmas Eve</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_After_Thanksgiving__c</fullName>
        <label>Day After Thanksgiving</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Independence_Day__c</fullName>
        <label>Independence Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labor_Day__c</fullName>
        <label>Labor Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memorial_Day__c</fullName>
        <label>Memorial Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Years_Day__c</fullName>
        <label>New Years Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Years_Eve__c</fullName>
        <label>New Years Eve</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Thanksgiving_Day__c</fullName>
        <label>Thanksgiving Day</label>
        <type>Date</type>
    </fields>
    <label>Holidays</label>
</CustomObject>